7,8주차 개선사항 수정 - 불변 class -> record - build.gradle 중복 디펜던시 제거 - Collector(toList) -> toList() 리팩터링 (불변리스트) - 불필요한 javadoc, 단순 주석 제거 - 낙관적락/비관적락 혼용 부분 비관적락으로 통일